completed some questions

--- a/hands-on/q3-combine-multiple-files/index.html
+++ b/hands-on/q3-combine-multiple-files/index.html
@@ -7,6 +7,8 @@
 </head>
 <body>
     <button id="load-btn">Load</button>
-    <textarea id="content"></textarea>
+    <textarea style="width: 400px; height: 300px" id="content"></textarea>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script src = "script.js"></script>
 </body>
 </html>
