--- a/hands-on/q5-array-of-json-objects/index.html
+++ b/hands-on/q5-array-of-json-objects/index.html
@@ -11,6 +11,9 @@
 
     <div id="all-users"></div>
 
+    <button id="btnFind">Find</button>
+
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
     <script src="script.js"></script>
   </body>
