--- a/hands-on/q7-simple-list/index.html
+++ b/hands-on/q7-simple-list/index.html
@@ -13,28 +13,23 @@
   </head>
   <body>
     <div class="container-fluid">
-      <h1>Employee Lists</h1>
-      <button>Load Employees</button>
-      <div id="employee-list" class="mt-3">
-        <div class="card">
+      <h1>Book Lists</h1>
+      <button id = "button">Load Books</button>
+      <div id="book-list" class="mt-3">
+
+        <!-- <div class="card">
           <div class="card-title">Tiger Nixon</div>
           <div class="card-body">
-            <ul>
-              <li>Salary: 320800</li>
-              <li>Age: 61</li>
-            </ul>
+            
+              <h3>Salary: 320800</h3>
+              <h3>Age: 61</h3>
+            
           </div>
-        </div>
-        <div class="card">
-          <div class="card-title">Garrett Winters</div>
-          <div class="card-body">
-            <ul>
-              <li>Salary: 170750</li>
-              <li>Age: 63</li>
-            </ul>
-          </div>
-        </div>
+        </div> -->
+
       </div>
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
+    <script src = "script.js" ></script>
   </body>
 </html>
