--- a/hands-on/q8-random-users/index.html
+++ b/hands-on/q8-random-users/index.html
@@ -6,9 +6,19 @@
     <title>Document</title>
 </head>
 <body>
-    <button id = 'button'>Load Random Quote</button>
-    <div id = 'display'></div>    
+    <button id="load-btn">Load</button>
+    <div id="content">
+        <!-- <div>
+        <h2>
+            first and last name
+        </h2>
+        <h3>
+            city
+        </h3>
+        <img src = "" />
+        </div> -->
+    </div>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/axios/0.19.2/axios.min.js"></script>
-<script src = script.js></script>
+    <script src="script.js"></script>
 </body>
 </html>
